--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cinema",
-  "homepage": "https://nmukassa1.github.io/cinema",
+  "homepage": "https://nmukassa1.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
