--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cinema",
-  "homepage": "https://nmukassa1.github.io/cinema",
+  "homepage": "https://nmukassa1.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
